Criando teste para o metodo Integer