@@ -6,13 +6,24 @@ import java.util.List;
 public class Teste {
 	
 	public static void main(String[] args) {
+				
+		int idade = 29;
 		
-		int[] idades = new int[5];
+		Integer idadeRef = Integer.valueOf(29);//autoboxing
+		System.out.println(idadeRef.doubleValue());
 		
-		String[] nomes = new String[5];
+		System.out.println(Integer.MAX_VALUE);
+		System.out.println(Integer.MIN_VALUE);
 		
-		int idade = 29;//Integer
-		Integer idadeRef = new Integer(29);
+		System.out.println(Integer.SIZE + " bits");
+		System.out.println(Integer.BYTES + " bytes");
+		
+		int valor = idadeRef.intValue();//unboxing		
+		String s = args[0];//"10"		
+		//Integer numero = Integer.valueOf(s);
+		int numero = Integer.parseInt(s);
+		System.out.println(numero);
+		
 		List<Integer> numeros = new ArrayList<Integer>();
 		numeros.add(29); //Autoboxing
 		
